fix: fixing sonarqube issues in backend